# shell_controller_2025

./: .gitignore  navigation_test.py  navigator_test.py  ppo_carla.db  readme.md  test.py  todo.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
roben_ai/: CMakeLists.txt  package.xml  ppo_carla.db  requirements.txt  setup.cfg  setup.py  test.py  todo.md
roben_ai/ai_src/: __init__.py  carla_env_prev_fix.txt  eval.py  gym_env_test.py  log2.txt  main.py  nav_test.ipynb  navigator_test.py  optuna_study.py  pid_test.ipynb  ppo_carla.db  requirements.txt  todo.todo  training.py
roben_ai/ai_src/carla_others/agents/navigation/: MPC.py  agent.py  autonomous_agent.py  basic_agent.py  behavior_agent.py  behavior_types.py  constant_velocity_agent.py  controller.py  global_route_planner.py  lane_change.py  local_planner.py  pid_controller.py  roaming_agent.py
roben_ai/ai_src/carla_others/agents/tools/: lane_detection.py  misc.py  sensors.py
roben_ai/ai_src/gym_carla/: __init__.py  make_env.py
roben_ai/ai_src/gym_carla/envs/: __init__.py  carla_env.py  render.py  route_planner.py
roben_ai/ai_src/models/: __init__.py  actor.py  backbone.py  critic.py
roben_ai/ai_src/navigator/: navigation_test.py  route_generator.py  test.py  tsp_solver.py  visualize.py  wp_utils.py
roben_ai/ai_src/navigator/test_lib/: agent_utils.py  traffic_test.py  utils.py  world_utils.py
roben_ai/ai_src/navigator/test_lib/car_dreamer/car_dreamer/toolkit/carla_manager/: world_manager.py
roben_ai/ai_src/navigator/test_lib/car_dreamer/car_dreamer/toolkit/observer/handlers/renderer/: birdeye_renderer.py
roben_ai/ai_src/runs/PPO_10/: events.out.tfevents.1745639733.zeyadcodeUbuntuJammy.9479.0
roben_ai/ai_src/runs/PPO_11/: events.out.tfevents.1745639789.zeyadcodeUbuntuJammy.9479.1
roben_ai/ai_src/runs/PPO_15/: events.out.tfevents.1745640068.zeyadcodeUbuntuJammy.11816.1
roben_ai/ai_src/runs/PPO_17/: events.out.tfevents.1745640106.zeyadcodeUbuntuJammy.11816.3
roben_ai/ai_src/runs/PPO_18/: events.out.tfevents.1745640125.zeyadcodeUbuntuJammy.11816.4
roben_ai/ai_src/runs/PPO_20/: events.out.tfevents.1745640840.zeyadcodeUbuntuJammy.17256.0
roben_ai/ai_src/runs/PPO_24/: events.out.tfevents.1745641962.zeyadcodeUbuntuJammy.25664.0
roben_ai/ai_src/runs/PPO_25/: events.out.tfevents.1745642097.zeyadcodeUbuntuJammy.26513.0
roben_ai/ai_src/runs/PPO_26/: events.out.tfevents.1745659933.zeyadcodeUbuntuJammy.35298.0
roben_ai/ai_src/runs/PPO_30/: events.out.tfevents.1745673069.zeyadcodeUbuntuJammy.10713.0
roben_ai/ai_src/runs/PPO_32/: events.out.tfevents.1745673750.zeyadcodeUbuntuJammy.10713.2
roben_ai/ai_src/runs/PPO_34/: events.out.tfevents.1745675639.zeyadcodeUbuntuJammy.10713.4
roben_ai/ai_src/runs/PPO_35/: events.out.tfevents.1745677172.zeyadcodeUbuntuJammy.10713.5
roben_ai/ai_src/runs/PPO_37/: events.out.tfevents.1745691951.zeyadcodeUbuntuJammy.13252.1
roben_ai/ai_src/runs/PPO_40/: events.out.tfevents.1745692969.zeyadcodeUbuntuJammy.24331.0
roben_ai/ai_src/runs/PPO_41/: events.out.tfevents.1745693466.zeyadcodeUbuntuJammy.27380.0
roben_ai/ai_src/runs/PPO_43/: events.out.tfevents.1745694029.zeyadcodeUbuntuJammy.31722.0
roben_ai/ai_src/runs/PPO_44/: events.out.tfevents.1745694405.zeyadcodeUbuntuJammy.34149.0
roben_ai/ai_src/runs/PPO_45/: events.out.tfevents.1745696112.zeyadcodeUbuntuJammy.45131.0
roben_ai/ai_src/runs/PPO_47/: events.out.tfevents.1745733361.zeyadcodeUbuntuJammy.4176.0
roben_ai/ai_src/runs/PPO_50/: events.out.tfevents.1745734537.zeyadcodeUbuntuJammy.12793.0
roben_ai/ai_src/runs/PPO_53/: events.out.tfevents.1745758910.zeyadcodeUbuntuJammy.5173.0
roben_ai/ai_src/runs/PPO_56/: events.out.tfevents.1745760174.zeyadcodeUbuntuJammy.15111.0
roben_ai/ai_src/runs/PPO_57/: events.out.tfevents.1745850996.zeyadcodeUbuntuJammy.27449.0
roben_ai/ai_src/runs/PPO_6/: events.out.tfevents.1745606267.zeyadcodeUbuntuJammy.4616.0
roben_ai/ai_src/runs/PPO_7/: events.out.tfevents.1745606866.zeyadcodeUbuntuJammy.4665.0
roben_ai/ai_src/runs/PPO_8/: events.out.tfevents.1745607112.zeyadcodeUbuntuJammy.4713.0
roben_ai/ai_src/self_driving/: ego_vehicle.py  hud.py  sensors.py  spawn_npc.py
roben_ai/ai_src/self_driving/agents/navigation/: agent.py  autonomous_agent.py
roben_ai/ai_src/self_driving/simplemotion-drive/carla_utils/: HUD.py  World.py
roben_ai/ai_src/training/: loss.py  trainer.py
roben_ai/ai_src/utils/: __init__.py  types.py
roben_ai/config/: __init__.py
roben_ai/gym_carla/: __init__.py
roben_ai/roben_ai/: brain.py  conversion_utils.py  remap_goal.py
roben_ai/runs/PPO_1/: events.out.tfevents.1745852112.zeyadcodeUbuntuJammy.31601.0
roben_ai/scripts/: install_requirements.py
(+939 files in other folders)
